common-applications/freesky-icsl-hk-cluster/mindspore-news-editor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-news-editor
  name: mindspore-news-editor
