common-applications/freesky-icsl-hk-cluster/mindspore-news-editor/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: mindspore-news-editor
spec:
  replicas: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: MS_MYSQL_URL
          valueFrom:
            secretKeyRef:
              key: ms_mysql_url
              name: backend-secret
        - name: MS_MYSQL_USERNAME
          valueFrom:
            secretKeyRef:
              key: ms_mysql_username
              name: backend-secret
        - name: MS_MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: ms_mysql_password
              name: backend-secret
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/icsl/mindspore-news-editor:432952c20889c9dcdbb35ff6e91c65f45fc5d891
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        name: backend
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
