common-applications/freesky-icsl-hk-cluster/mindspore-news-editor/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mindspore-news-editor
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
