common-applications/freesky-icsl-hk-cluster/mindspore-news-editor/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: backend-ingress
  namespace: mindspore-news-editor
spec:
  rules:
  - host: news.mindspore.myopeninfra.com
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - news.mindspore.myopeninfra.com
    secretName: backend-tls
